# web_payment_application

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inf349.py  models.py  pyproject.toml
controllers/: orders_controllers.py
postman/: INF349.postman_collection.json
services/: orders_service.py  products_importer.py
tests/: conftest.py  test_get_products.py  test_orders.py  test_payment.py  test_services.py
